<resources>
    <string name="app_name">My Ewaste</string>
    <string name="logo_splash">logo splash</string>
    <string name="logo_forgot">logo forgot</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="nik">NIK</string>
    <string name="start_date">Tanggal mulai</string>
    <string name="end_date">Tanggal akhir</string>
    <string name="new_password">Password baru</string>
    <string name="password_confirm">Konfirmasi password</string>
    <string name="register">Daftar</string>
    <string name="register_by">Daftar %s</string>
    <string name="cancel">Batal</string>
    <string name="logo_register">logo register</string>
    <string name="slogan">Selamatkan bumi dari sampah,\ndan tukarkan menjadi uang!</string>
    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="address">Alamat</string>
    <string name="upload_ktp">Upload KTP</string>
    <string name="upload">Upload</string>
    <string name="click_to_choose_picture">Klik untuk pilih gambar!</string>
    <string name="register_underline"><u>Daftar</u></string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="btn_send_upload">btn send upload</string>
    <string name="login">Masuk</string>
    <string name="forgot_password_click">Lupa Password?</string>
    <string name="logo_login">logo login</string>
    <string name="logout">Keluar</string>
    <string name="input_can_not_be_empty">%s tidak boleh kosong!</string>
    <string name="wrong_password">Password salah</string>
    <string name="accont_inactive">Akun Anda Tidak Aktif Hubungi Admin Untuk Informasi Lebih Lanjut</string>
    <string name="account_not_found">User tidak ditemukan</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="alert">Peringatan!</string>
    <string name="you_sure_change_password">Anda yakin ingin mengganti password?</string>
    <string name="save">Simpan</string>
    <string name="phone">Telepon</string>
    <string name="greet">Hi, %s</string>
    <string name="photo_profil">Photo Profil</string>
    <string name="welcome_greet">Selamat Datang Kembali!</string>
    <string name="my_saldo">Saldo Saya</string>
    <string name="pending">Tertunda</string>
    <string name="income">Pendapatan</string>
    <string name="deposit">Setoran</string>
    <string name="withdraw">Penarikan Saldo</string>
    <string name="hint_withdraw">Inputkan jumlah (IDR)</string>
    <string name="not_enough_balance">Saldo anda tidak cukup untuk melakukan penarikan tersebut!</string>
    <string name="btn_withdraw">button penarikan saldo</string>
    <string name="deposit_balance">Setoran Timbangan</string>
    <string name="scale">Timbang</string>
    <string name="see_all">Semua</string>
    <string name="button_see_all">button see all</string>
    <string name="placeholder">placeholder</string>
    <string name="history_withdraw">History Penarikan</string>
    <string name="input_ballance">Penginputan Timbangan</string>
    <string name="task">task</string>
    <string name="report">Laporan</string>
    <string name="report_transaction_item">Laporan Timbangan Nasabah</string>
    <string name="report_transaction_saldo">Laporan Transaksi Saldo</string>
    <string name="data">Data</string>
    <string name="data_nasabah">Data Nasabah</string>
    <string name="data_teller">Data Teller</string>
    <string name="data_admin">Data Admin</string>
    <string name="data_saldo_nasabah">Data Saldo Nasabah</string>
    <string name="master">Master</string>
    <string name="customer_withdraw">Penarikan Nasabah</string>
    <string name="customer_ballance">Penimbangan Nasabah</string>
    <string name="item">Barang</string>
    <string name="item_type">Jenis Barang</string>
    <string name="unit">Satuan</string>
    <string name="nasabah">Nasabah</string>
    <string name="teller">Teller</string>
    <string name="admin">Super Admin</string>
    <string name="ballance">Saldo Nasabah</string>
    <string name="operational_cost">Biaya Operasional</string>
    <string name="search">cari</string>
    <string name="search_id">cari id</string>
    <string name="title_search_empty">Cari nasabah untuk lakukan\npengiputan timbangan</string>
    <string name="button_back">button back</string>
    <string name="total_scales">Jumlah</string>
    <string name="input_balance_empty">Belum ada aktivitas timbangan!\nklik tambah untuk melakukan timbangan</string>
    <string name="title_empty_placeholder">Data %s belum ada!\nSilahkan tambah data %s user</string>
    <string name="btn_add_transaction_scale">btn add transaction scale</string>
    <string name="message_permission">Aplikasi ini butuh akses storage untuk mendownload file!</string>
    <string name="add">Tambah</string>
    <string name="type_item">Jenis barang</string>
    <string name="price">Harga</string>
    <string name="price_item">Harga barang</string>
    <string name="title_type_item_empty">Jenis barang masih kosong\nSilahkan tambah jenis barang!</string>
    <string name="title_master_item_empty">Master barang masih kosong\nSilahkan tambah master barang!</string>
    <string name="title_data_transaction_empty">Data transaksi %s tidak ada!</string>
    <string name="title_unit_type">Satuan barang masih kosong\nSilahkan tambah satuan barang!</string>
    <string name="item_master">Master Barang</string>
    <string name="title_name_item_master">Nama barang</string>
    <string name="add_item">Tambah Barang</string>
    <string name="update_item">Ubah Barang</string>
    <string name="update_transaction">Ubah transaksi</string>
    <string name="cancel_transaction">Batalkan transaksi</string>
    <string name="update">Ubah</string>
    <string name="profile">Profil</string>
    <string name="nik_is_registerd">Nik sudah terdaftar</string>
    <string name="submit_success">%s berhasil ditambah</string>
    <string name="submit_failure">%s gagal ditambah</string>
    <string name="update_success">%s berhasil diubah</string>
    <string name="update_failure">%s gagal diubah</string>
    <string name="message_delete_item_master">Apakah anda yakin untuk menghapus barang %s!</string>
    <string name="message_delete_item">Apakah anda yakin untuk menghapus item?</string>
    <string name="message_delete_transaction">Apakah anda yakin untuk menghapus transaksi</string>
    <string name="message_success_delete_transaction">Berhasil menghapus transaksi</string>
    <string name="message_failure_delete_transaction">Gagal menghapus transaksi</string>
    <string name="placeholder_unit">%s %s</string>
    <string name="placeholder_price_per_unit">%s/%s</string>
    <string name="message_avatar">Apakah anda yakin untuk %s avatar profil</string>
    <string name="message_delete_unit_item">Apakah anda yakin untuk menghapus satuan %s!</string>
    <string name="action_delete_item_message">Barang %s %s dihapus</string>
    <string name="action_delete_unit_message">Satuan %s %s dihapus</string>
    <string name="action_delete_avatar_message">avatars %s dihapus</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="delete">Hapus</string>
    <string name="unit_item">Satuan Barang</string>
    <string name="add_unit_item">Tambah Satuan</string>
    <string name="add_item_type">Tambah Jenis Barang</string>
    <string name="update_item_type">Ubah Jenis Barang</string>
    <string name="update_unit_item">Ubah Satuan</string>
    <string name="loading_message">Tunggu sebentar…</string>
    <string name="hasSimiliar">%s sudah ada</string>
    <string name="cat_item">kategori barang</string>
    <string name="none">none</string>
    <string name="active_or_deactive_failure">Gagal %s</string>
    <string name="active_or_deactive_success">Berhasil %s</string>
    <string name="success">Berhasil</string>
    <string name="failure">Gagal</string>
    <string name="total_income">Total pendapatan</string>
    <string name="status">status</string>
    <string name="date">Tanggal</string>
    <string name="no_transaction">ID Transaksi</string>
    <string name="details_transaction">Rincian Transaksi</string>
    <string name="total_withdraw">Total penarikan</string>
    <string name="withdraw_title">Penarikan</string>
    <string name="cuts_transaction">Potongan</string>
    <string name="message">Jadilah penyelamat bumi\n Dengan memisahkan sampah anda!</string>
    <string name="chip">chip</string>
    <string name="pch">PCH</string>
    <string name="bank_trash">Bank Sampah</string>
    <string name="currency">Rp.0</string>
    <string name="withdrawal">Cairkan</string>
    <string name="reject_transcation">Tolak transaksi</string>
    <string name="accepted_transaction">Setujui transaksi</string>
    <string name="accepted">Diterima</string>
    <string name="field_name_nasabah">Nasabah : %s</string>
    <string name="field_name_teller">Teller : %s</string>


    <string name="ewaste_pch">BANK SAMPAH PCH</string>
    <string name="no_register">No Registered</string>
    <string name="data_item_transaction">Data Transaksi Barang</string>
    <string name="data_saldo_transaction">Data Transaksi Saldo</string>
    <string name="name_nasabah">Nama Nasabah</string>
    <string name="name_teller">Nama Teller</string>
    <string name="total_price">Total Harga</string>
    <string name="formate_date">12–21–2102</string>

    <string name="notification">Notification</string>
    <string name="notification_message">Download report berhasil</string>

    <string-array name="list_gender">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>